--- a/imarinchev/src/App.css
+++ b/imarinchev/src/App.css
@@ -9,7 +9,7 @@
     position: relative;
     top: 70px;
     scroll-behavior: smooth;
-    scroll-snap-type: y mandatory;
+    scroll-snap-type: y;
     scrollbar-width: none;
 }
 .sections::-webkit-scrollbar {
