--- a/imarinchev/src/components/navbar/navbar.css
+++ b/imarinchev/src/components/navbar/navbar.css
@@ -1,8 +1,75 @@
 .navbar{
     width: 100%;
     height: 70px;
-    background-color: navy;
+    background-color: white;
+    color: darkblue;
     position: fixed;
     top: 0;
     z-index: 2;
+    transition: all 1s ease;
+}
+
+.wrapper{
+    padding: 10px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo{
+    font-size: 40px;
+    font-weight: 700;
+    text-decoration: none;
+}
+
+.left{
+    display: flex;
+    align-items: center;
+}
+
+.itemContainer{
+display: flex;
+align-items: center;
+margin-left: 30px;
+}
+
+.icon{
+    font-size: 18px;
+    margin-right: 5px;
+}
+
+span{
+    margin-left: 5px;
+}
+
+.right .hamburger {
+    width: 32px;
+    height: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+}
+.right .hamburger span {
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    transform-origin: left;
+    transition: all 2s ease;
+}
+
+.active {
+    background-color: black;
+    color: white;
+}
+.active .hamburger span:first-child {
+    background-color: white;
+    transform: rotate(45deg);
+}
+.active .hamburger span:nth-child(2) {
+    opacity: 0;
+}
+.active .hamburger span:last-child {
+    background-color: white;
+    transform: rotate(-45deg);
 }
