--- a/imarinchev/src/components/contact/contact.css
+++ b/imarinchev/src/components/contact/contact.css
@@ -1,3 +1,55 @@
-.contact{
-    background-color: lightblue;
+.contact {
+    background-color: white;
+    display: flex;
+}
+.contact .contactLeft {
+    flex: 1;
+    overflow: hidden;
+}
+.contact .contactLeft img {
+    height: 100%;
+}
+.contact .contactRight {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.contact .contactRight h2 {
+    font-size: 30px;
+}
+.contact .contactRight form {
+    width: 70%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+.contact .contactRight form input {
+    width: 300px;
+    height: 30px;
+    font-size: 14px;
+}
+.contact .contactRight form textarea {
+    width: 300px;
+    height: 200px;
+    font-size: 14px;
+}
+.contact .contactRight form button {
+    width: 150px;
+    height: 30px;
+    color: white;
+    background-color: crimson;
+    border: none;
+    border-radius: 10px;
+    font-weight: 500;
+    cursor: pointer;
+}
+.contact .contactRight form button:focus {
+    outline: none;
+}
+.contact .contactRight form span {
+    color: green;
 }
