--- a/imarinchev/src/components/intro/intro.css
+++ b/imarinchev/src/components/intro/intro.css
@@ -68,3 +68,37 @@ h3{
         opacity: 0;
     }
 }
+
+ 
+@media (max-width: 768px){
+
+    .intro{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    img{
+        height: 50%;
+    }
+
+    .imgContainer{
+        align-items: flex-start;
+    }
+    
+    .introWrapper{
+        padding-left: 0;
+        align-items: center;
+    }
+
+    h1{
+        font-size: 40px;
+    }
+
+    h3{
+        font-size: 20px;
+    }
+
+    .arrow{
+        margin-left: 110px;
+    }
+}
