--- a/imarinchev/src/components/navbar/navbar.css
+++ b/imarinchev/src/components/navbar/navbar.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 70px;
     background-color: white;
-    color: darkblue;
+    color: black;
     position: fixed;
     top: 0;
     z-index: 3;
@@ -73,4 +73,12 @@ span{
 .active .hamburger span:last-child {
     background-color: white;
     transform: rotate(-45deg);
+}
+
+@media (max-width: 768px){
+
+    .itemContainer{
+        display: none;
+    }
+
 }
