--- a/imarinchev/src/components/intro/intro.css
+++ b/imarinchev/src/components/intro/intro.css
@@ -69,6 +69,15 @@ h3{
     }
 }
 
+.introWrapper span{
+    font-size: 40px;
+}
+
+.ityped-cursor {
+    animation: blink 1s infinite;
+  }
+
+
  
 @media (max-width: 768px){
 
@@ -101,4 +110,6 @@ h3{
     .arrow{
         margin-left: 110px;
     }
+
+
 }
