portfolio page navigation buttons design fix

--- a/imarinchev/src/components/portfolio/portfolio.css
+++ b/imarinchev/src/components/portfolio/portfolio.css
@@ -69,7 +69,8 @@
       margin: 10px 0;
       flex-wrap: wrap;
       justify-content: center;
-      height: 20%;
+      height: 6%;
+      margin-bottom: 15%;
       
   }
 
